# rocket-game

./: .dockerignore  .editorconfig  .gitignore  Credits.md  README.md  launch.ps1  rocket-game.sln
src/Rocket/: Game1.cs  GameSettings.cs  OtherRocket.cs  Rocket.cs  Rocket.csproj  Shot.cs
src/Rocket/Content/: Content.mgcb
src/Rocket/Content/Backgrounds/: Infinite.fx
src/Rocket/Content/Fonts/: Basic.spritefont  BitmapFont01.fnt  DialogFont.spritefont
src/Rocket/Networking/: GameNetwork.cs
src/RocketServer/: Program.cs  RocketServer.csproj
src/RocketServerCpp/: CMakeLists.txt  CRC32.cpp  CRC32.h  Dockerfile  RocketServerCpp.vcxproj  RocketServerCpp.vcxproj.filters
src/RocketShared/: NetworkPacket.cs
src/cpp/Rocket/: Game.cpp  Game.h  Graphics.cpp  Graphics.h  RCa53000  Resource.h  Rocket.rc  Rocket.vcxproj  Rocket.vcxproj.filters  main.cpp
src/cpp/RocketConsole/: CMakeLists.txt  Client.cpp  Client.h  ClientNetwork.cpp  ClientNetwork.h  Dockerfile  RocketConsole.vcxproj  RocketConsole.vcxproj.filters  main.cpp
src/cpp/RocketServer/: .dockerignore  CMakeLists.txt  CRC32.cpp  CRC32.h  Dockerfile  FloatInt.h  GamePacket.cpp  GamePacket.h  GameStateSnapshot.h  Keyboard.h  LogLevel.h  Logger.cpp  Logger.h  Network.cpp  Network.h  NetworkBase.h  NetworkConnectionState.h  NetworkPacket.cpp  NetworkPacket.h  NetworkPacketType.h  NetworkQueue.h  NetworkUtilities.h  PacketInfo.h  PhysicsEngine.cpp  PhysicsEngine.h  Platform.h  Player.h  PlayerState.h  RocketServer.cpp  RocketServer.vcxproj  RocketServer.vcxproj.filters  RocketServerCpp.vcxproj  RocketServerCpp.vcxproj.filters  Scene.h  Server.cpp  Server.h  ServerNetwork.cpp  ServerNetwork.h  ServerNetworkBase.h  Utils.cpp  (+2 more)
src/dotnet/Rocket/: Game1.cs  GameSettings.cs  OtherRocket.cs  Program.cs  Rocket.csproj
src/dotnet/Rocket/Content/: Content.mgcb
src/dotnet/Rocket/Networking/: GameNetworkStatus.cs
src/dotnet/RocketServer/: Dockerfile  Program.cs
src/dotnet/RocketServer/Properties/: launchSettings.json
src/dotnet/RocketShared/: NetworkPacket.cs  RocketShared.csproj
test/RocketServerTests/: AckTests.cpp  NetworkPacketStub.h  NetworkPacketTest.cpp  NetworkPacketTests.cpp  RocketServerTests.vcxproj  RocketServerTests.vcxproj.filters  SequenceNumberTests.cpp  ServerNetworkStub.h  ServerTests.cpp
test/RocketTests/: RocketTests.cpp  RocketTests.vcxproj  RocketTests.vcxproj.filters
